--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,68 @@
-streamlit
+altair==4.2.2
+annotated-types==0.7.0
+anyio==4.6.2.post1
+attrs==24.2.0
+audio-recorder-streamlit==0.0.10
+blinker==1.8.2
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+distro==1.9.0
+entrypoints==0.4
+gitdb==4.0.11
+GitPython==3.1.43
+google-api-core==2.22.0
+google-auth==2.35.0
+google-cloud-speech==2.28.0
+google-cloud-texttospeech==2.21.0
+googleapis-common-protos==1.65.0
+grpcio==1.67.1
+grpcio-status==1.67.1
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
+idna==3.10
+Jinja2==3.1.4
+jiter==0.7.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+narwhals==1.13.2
+numpy==2.1.3
+openai==1.54.3
+packaging==24.1
+pandas==2.2.3
+pillow==10.4.0
+proto-plus==1.25.0
+protobuf==5.28.3
+pyarrow==18.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.9.2
+pydantic_core==2.23.4
+pydeck==0.9.1
+pydub==0.25.1
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+referencing==0.35.1
+requests==2.32.3
+rich==13.9.4
+rpds-py==0.21.0
+rsa==4.9
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+streamlit==1.39.0
+tenacity==9.0.0
+toml==0.10.2
+toolz==1.0.0
+tornado==6.4.1
+tqdm==4.67.0
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+watchdog==5.0.3
