--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ protobuf==5.28.3
 pyarrow==18.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+PyAudio==0.2.14
 pydantic==2.9.2
 pydantic_core==2.23.4
 pydeck==0.9.1
