--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ audio-recorder-streamlit==0.0.10
 blinker==1.8.2
 cachetools==5.5.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
 distro==1.9.0
@@ -41,7 +42,7 @@ protobuf==5.28.3
 pyarrow==18.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
-PyAudio==0.2.14
+pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 pydeck==0.9.1
@@ -57,6 +58,7 @@ rsa==4.9
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+sounddevice==0.5.1
 streamlit==1.39.0
 tenacity==9.0.0
 toml==0.10.2
