--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ protobuf==5.28.3
 pyarrow==18.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+PyAudio==0.2.14
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
@@ -58,7 +59,6 @@ rsa==4.9
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
-sounddevice==0.5.1
 streamlit==1.39.0
 tenacity==9.0.0
 toml==0.10.2
